Initial working version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,27 +16,6 @@ ENDIF(Boost_FOUND)
 
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-ADD_EXECUTABLE(first src/first.cpp)
-target_include_directories(first PUBLIC src/ )
-TARGET_LINK_LIBRARIES(first ${Boost_LIBRARIES})
-
-ADD_EXECUTABLE(asyncclient src/asyncclient.cpp)
-target_include_directories(asyncclient PUBLIC src/ )
-TARGET_LINK_LIBRARIES(asyncclient ${Boost_LIBRARIES})
-
-ADD_EXECUTABLE(asyncserver src/asyncserver.cpp)
-target_include_directories(asyncserver PUBLIC src/ )
-TARGET_LINK_LIBRARIES(asyncserver ${Boost_LIBRARIES})
-
-ADD_EXECUTABLE(client src/client.cpp)
-target_include_directories(client PUBLIC src/ )
-TARGET_LINK_LIBRARIES(client ${Boost_LIBRARIES})
-
-ADD_EXECUTABLE(server src/server.cpp)
-target_include_directories(server PUBLIC src/ )
-TARGET_LINK_LIBRARIES(server ${Boost_LIBRARIES})
-
-ADD_EXECUTABLE(server2 src/server2.cpp)
-target_include_directories(server2 PUBLIC src/ )
-TARGET_LINK_LIBRARIES(server2 ${Boost_LIBRARIES})
-
+ADD_EXECUTABLE(painlessMeshBoost src/main.cpp src/fake_serial.cpp libs/painlessMesh/src/painlessMeshConnection.cpp libs/painlessMesh/src/scheduler.cpp)
+target_include_directories(painlessMeshBoost PUBLIC src/ libs/TaskScheduler/src/ libs/ArduinoJson/ libs/painlessMesh/src/)
+TARGET_LINK_LIBRARIES(painlessMeshBoost ${Boost_LIBRARIES})
