--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ variables:
 build_testing:
   before_script:
     - apt-get update -qq && apt-get install -y -qq cmake
-    - apt-get install libboost-system-dev libboost-thread-dev libboost-regex-dev libboost-program-options-dev libboost-chrono-dev libboost-date-time-dev libboost-atomic-dev -y -qq
+    - apt-get install libboost-system-dev libboost-thread-dev libboost-regex-dev libboost-program-options-dev libboost-chrono-dev libboost-date-time-dev libboost-atomic-dev libboost-filesystem-dev -y -qq
     - cmake . -DCMAKE_CXX_FLAGS="-Wall -Werror"
   script:
     - make
