--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libs/TaskScheduler"]
 	path = libs/TaskScheduler
 	url = https://github.com/arkhipenko/TaskScheduler
+[submodule "libs/uuid"]
+	path = libs/uuid
+	url = https://github.com/boostorg/uuid.git
