Initial commit for own smarthome implementation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,16 +9,19 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 SET(Boost_USE_STATIC_LIBS OFF)
 SET(Boost_USE_MULTITHREAD ON)
 
+FIND_PACKAGE(OpenSSL REQUIRED)
+include_directories(${OPENSSL_INCLUDE_DIR})
+
 FIND_PACKAGE(Boost 1.42.0 REQUIRED COMPONENTS filesystem system thread regex program_options)
 IF(Boost_FOUND)
   INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
   LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})
 ENDIF(Boost_FOUND)
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -g")
 
-ADD_EXECUTABLE(painlessMeshBoost src/main.cpp src/fake_serial.cpp libs/painlessMesh/src/painlessMeshConnection.cpp libs/painlessMesh/src/scheduler.cpp)
+ADD_EXECUTABLE(painlessMeshBoost src/main.cpp src/fake_serial.cpp src/chat_client.cpp libs/painlessMesh/src/painlessMeshConnection.cpp libs/painlessMesh/src/scheduler.cpp src/filesystemwatcher.cpp )
 target_include_directories(painlessMeshBoost PUBLIC src/ libs/TaskScheduler/src/ libs/ArduinoJson/ libs/painlessMesh/src/ libs/uuid/include/)
-TARGET_LINK_LIBRARIES(painlessMeshBoost ${Boost_LIBRARIES})
+TARGET_LINK_LIBRARIES(painlessMeshBoost ${Boost_LIBRARIES} ${OPENSSL_LIBRARIES})
 
 install(TARGETS painlessMeshBoost DESTINATION bin)
